@@ -416,6 +416,28 @@ sub xst_xml_read_file
 }
 
 
+sub xst_xml_read_compressed_file
+{
+  my ($file) = @_;
+  my ($doc, $i, $gunzip);
+  local *INPUT_FILE;
+
+  $gunzip = &xst_file_locate_tool ("gunzip");
+  if (!$gunzip) { return undef; }
+
+  open INPUT_FILE, "$gunzip -c $file 2>/dev/null |";
+  $doc .= $i while ($i = <INPUT_FILE>);
+  close INPUT_FILE;
+
+  if (length ($doc) < 4)  # Allow for one blank line from gzip, '\n\r'.
+  {
+    $doc = undef;
+  }
+
+  return $doc;
+}
+
+
 sub xst_xml_read_stdin
 {
   my ($i, $doc);
@@ -514,7 +536,11 @@ sub xst_xml_model_scan  # (file) If no file specified, reads stdin.
 
   if ($file)
   {
-    $doc = &xst_xml_read_file ($file);
+    $doc = &xst_xml_read_compressed_file ($file);
+    if (!$doc)
+    {
+      $doc = &xst_xml_read_file ($file);
+    }
   }
   else
   {
